--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>executando o script</h1>
+    <script src="app.js"></script>
     
 </body>
 </html>
